--- a/index.html
+++ b/index.html
@@ -1275,29 +1275,42 @@ function processGestures(lm) {
 
     // ========== 4. 核心状态机逻辑 ==========
     if (isPinching) {
-        // FOCUS模式：Pinch捏合 → 切换照片/聚焦星星
-        STATE.mode = 'FOCUS';
-        // 过滤有效照片（确保mesh存在）
-        const photos = particleSystem.filter(p => p.type === 'PHOTO' && p.mesh);
-        console.log("有效照片列表：", photos.map((p, i) => `第${i}张：${p.mesh.name || '未命名'}`));
-        console.log("当前全局索引：", window.photoIndex);
+    // FOCUS模式：Pinch捏合 → 切换照片/聚焦星星
+    STATE.mode = 'FOCUS';
+    // 过滤有效照片（确保mesh存在）
+    const photos = particleSystem.filter(p => p.type === 'PHOTO' && p.mesh);
+    console.log("有效照片列表：", photos.map((p, i) => `第${i}张：${p.mesh.name || '未命名'}`));
+    console.log("当前全局索引：", window.photoIndex);
 
-        // 只在「刚捏合」的瞬间切换目标（防抖动）
-        if (isJustPinched && photos.length > 0) {
-            // 循环更新索引
-            window.photoIndex = (window.photoIndex + 1) % photos.length;
-            STATE.focusTarget = photos[window.photoIndex].mesh;
-            console.log("Pinch切换到：第", window.photoIndex, "张照片");
-        } else if (photos.length === 0) {
-            STATE.focusTarget = STATE.starMesh;
-            console.log("无照片，聚焦星星");
-        }
+    // 只在「刚捏合」的瞬间切换目标（防抖动）
+    if (isJustPinched && photos.length > 0) {
+        // ========== 核心修改：顺序 → 随机 ==========
+        // 方案1：纯随机（可能重复选到同一张）
+        const randomIndex = Math.floor(Math.random() * photos.length);
+        window.photoIndex = randomIndex; // 更新全局索引为随机值
+        
+        // 方案2：随机且不重复（可选，避免连续选同一张）
+        // if (photos.length > 1) {
+        //     let randomIndex;
+        //     // 循环直到选到和当前不同的索引
+        //     do {
+        //         randomIndex = Math.floor(Math.random() * photos.length);
+        //     } while (randomIndex === window.photoIndex);
+        //     window.photoIndex = randomIndex;
+        // }
+        
+        STATE.focusTarget = photos[window.photoIndex].mesh;
+        console.log("Pinch随机切换到：第", window.photoIndex, "张照片");
+    } else if (photos.length === 0) {
+        STATE.focusTarget = STATE.starMesh;
+        console.log("无照片，聚焦星星");
+    }
 
-        // 聚焦时停止手势旋转
-        STATE.hasPalmCenter = false;
-        STATE.spinVel.x *= 0.9;
-        STATE.spinVel.y *= 0.9;
-    } else {
+    // 聚焦时停止手势旋转
+    STATE.hasPalmCenter = false;
+    STATE.spinVel.x *= 0.9;
+    STATE.spinVel.y *= 0.9;
+}else {
         // TREE/SCATTER模式：非Pinch状态 → 手掌控制旋转
         STATE.wasPointing = false; // 兼容原有指点手势的状态重置
 
